Working version without Combiner