@@ -13,19 +13,23 @@ import static org.junit.Assert.assertEquals;
 
 
 public class TrafficAnalyzerTest {
-            MapDriver<Object, Text, Text, FloatWritable> mapDriver;
-            ReduceDriver<Text, MapWritable, Text, Text> reduceDriver;
-            MapReduceDriver<Object, Text, Text, MapWritable, Text, Text> mapReduceDriver;
 
+
+        MapDriver<Object, Text, Text, FloatWritable> mapDriver;
+        ReduceDriver<Text, FloatWritable, Text, Text> reduceDriver;
+        MapReduceDriver<Object, Text, Text, FloatWritable, Text, Text> mapReduceDriver;
 
         @Before
         public void setUp() {
+
             TrafficAnalyzer.TokenizerMapper mapper = new TrafficAnalyzer.TokenizerMapper();
-            TrafficAnalyzer.Combiner combiner = new TrafficAnalyzer.Combiner();
+            //TrafficAnalyzer.Combiner combiner = new TrafficAnalyzer.Combiner();
             TrafficAnalyzer.IntSumReducer reducer = new TrafficAnalyzer.IntSumReducer();
+
             mapDriver = MapDriver.newMapDriver(mapper);
             reduceDriver = ReduceDriver.newReduceDriver(reducer);
-            mapReduceDriver = MapReduceDriver.newMapReduceDriver(mapper, reducer, combiner);
+            mapReduceDriver = MapReduceDriver.newMapReduceDriver(mapper, reducer);
+
         }
 
 
@@ -34,18 +38,11 @@ public class TrafficAnalyzerTest {
 
             mapDriver.withInput(new Text("key"), new Text("ip140 - - [24/Apr/2011:12:34:53 -0400] \"GET /sunFAQ/ HTTP/1.1\" 200 8342 \"http://host2/\" \"Mozilla/5.0 (Windows; U; Windows NT 6.1; en-US; rv:1.9.2.16) Gecko/20110319 Firefox/3.6.16 ( .NET CLR 3.5.30729)\""));
 
-            List<Pair<Text, MapWritable>> results = new ArrayList<Pair<Text, MapWritable>>();
+            List<Pair<Text, FloatWritable>> results = new ArrayList<Pair<Text, FloatWritable>>();
             results = mapDriver.run();
 
-            Iterator<Map.Entry<Writable, Writable>> entryIterator = results.get(0).getSecond().entrySet().iterator();
-
-            Map.Entry<Writable, Writable> entryAverage = entryIterator.next();
-            assertEquals (new Text("average"), (Text) entryAverage.getKey());
-            assertEquals (new DoubleWritable(8342), entryAverage.getValue());
-
-            Map.Entry<Writable, Writable> entryTotal = entryIterator.next();
-            assertEquals (new Text("total"),  entryTotal.getKey());
-            assertEquals (new DoubleWritable(8342), entryTotal.getValue());
+            assertEquals (new Text("ip140"), results.get(0).getFirst());
+            assertEquals (new FloatWritable(8342), results.get(0).getSecond());
 
         }
 
@@ -53,18 +50,10 @@ public class TrafficAnalyzerTest {
         @Test
         public void testReducer() throws IOException {
 
-            List<MapWritable> values = new ArrayList<MapWritable>();
+            List<FloatWritable> values = new ArrayList<FloatWritable>();
 
-            MapWritable mapRecord1 = new MapWritable();
-            mapRecord1.put(new Text("total"), new DoubleWritable(8342));
-            mapRecord1.put(new Text("average"), new DoubleWritable(8342));
-
-            MapWritable mapRecord2 = new MapWritable();
-            mapRecord2.put(new Text("total"), new DoubleWritable(29554));
-            mapRecord2.put(new Text("average"), new DoubleWritable(29554));
-
-            values.add(mapRecord1);
-            values.add(mapRecord2);
+            values.add(new FloatWritable(8342));
+            values.add(new FloatWritable(29554));
 
             reduceDriver.withInput(new Text("ip140"), values);
 
